ResourceObject/Secret.yaml
## 普通类型Secret，挂载secret数据到pod来使用它
# yaml方式
---
apiVersion: v1
kind: Pod
metadata:
  name: foo
spec:
  containers:
    - name: foo
      image: janedoe/awesomeapp:v1
  imagePullSecrets:
    - name: myregistrykey



## Secret在ServiceAccount中使用
kubernetes.io/service-account-token
用于被serviceaccount引用。serviceaccout创建时Kubernetes会默认创建对应的secret。Pod如果使用了serviceaccount，对应的secret会自动挂载到Pod的/run/secrets/kubernetes.io/serviceaccount目录中。
