ResourceObject/downwardApi.yaml
# 环境变量：将pod信息设置为容器内的环境变量
apiVersion: v1
kind: Pod
metadata:
  name: string
spec:
  containers:
    - name: string
      image: string
apiVersion: v1
kind: Pod
metadata:
  name: string
spec:
  containers:
    - name: string
      image: string
apiVersion: v1
kind: Pod
metadata:
  name: string
spec:
  containers:
    - name: string
      image: string
      volumeMounts:
        - name: string
          mountPath: /the/mount/path/
  volumes:
    - name: string
      downwardAPI:
        items:
          - path: "string"  # 文件名
            fieldRef:
              # fieldPath常用字段，metadata.labels metadata.annotations
              # fieldPath字段取值，是kubectl describe * -o yaml的结果表示
              fieldPath: string


# 挂载：将container信息挂载为容器内的文件
apiVersion: v1
kind: Pod
metadata:
  name: string
spec:
  containers:
    - name: string
      image: string
      volumeMounts:
        - name: string
          mountPath: /the/mount/path/
  volumes:
    - name: string
      downwardAPI:
        items:
          - path: "string"  # 文件名
            resourceFieldRef:
              containerName: string
              # resource常用字段：request.cpu limits.cpu request.memory limits.memory
              # resource字段取值，是kubectl describe * -o yaml的结果中，container部分内容里的字段
              resource: string
              divisor: cpu：1m  memory：1Mi，参考如下示例

          - path: "cpu_limit"
            resourceFieldRef:
              containerName: string
              resource: limits.cpu
              divisor: 1m
          - path: "cpu_request"
            resourceFieldRef:
              containerName: client-container
              resource: requests.cpu
              divisor: 1m
          - path: "mem_limit"
            resourceFieldRef:
              containerName: client-container
              resource: limits.memory
              divisor: 1Mi
          - path: "mem_request"
            resourceFieldRef:
              containerName: client-container
              resource: requests.memory
              divisor: 1Mi
