ResourceObject/healthProbe.yaml
# pod健康检查
# https://www.cnblogs.com/superlinux/p/14933961.html
apiVersion: v1
kind: Pod
metadata:
  name: string
spec:
  containers:
    - name: string
      image: string

      # 三种健康检查方式： livenessProbe readinessProbe startupProbe，每种配置内容一样
      livenessProbe:
        # 三种探测实现方式： exec httpGet tcpSocket
        exec:
          command:
            - string
        httpGet:  # 返回状态码，>=200 <400，则认为容器健康
          host: string
          port: int
          path: string
          scheme: string
          httpHeaders:
            - name: string
              value: string
        tcpSocket:
          port: int

        initialDelaySeconds: 0  # 容器完成后，首次探测的时间，单位s
        timeoutSeconds: 0       # 对容器健康检查，探测等待响应的超时时间设置，单位s，默认为1s
        periodSeconds: 0        # 对容器健康检查的定期探测时间设置，单位s，默认10s探测一次
        successThreshold: 0     # 探针的成功的阈值，在达到该次数时，表示成功；默认值为 1，表示只要成功一次，就算成功了
        failureThreshold: 0     # 表示探针的最大失败次数，如果达到了最大的失败次数，在存活性探针的情况，容器将重新启动；默认值为3
        terminationGracePeriodSeconds: 60s  # 等待指定的时间称为优雅终止宽限期，超过该期限，立即杀死pod，默认30s

      readinessProbe:
        xxx  # 同上
      startupProbe:
        xxx  # 同上


# Pod Readiness Gates
# https://zhuanlan.zhihu.com/p/158664888
apiVersion: v1
kind: Pod
metadata:
  name: string
spec:
  containers:
    - name: string
      image: string
  readinessGates:
    - conditionType: string
status:
  conditions:
    - status: "False" | "True"
      type: "string"
