ResourceObject/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: string
  namespace: string
  labels:
    app: string
  annotations:
    app: string
spec:
  resources:  # pod级别的requests limits
    requests:
      cpu: 200m
      memory: 500Mi
    limits:
      cpu: 500m
      memory: 1Gi
  containers:
    - name: string
      image: string
      imagePullPolicy: [ IfNotPresent | Always | Never ]
      securityContext:
        privileged: false
      command:  # 容器启动命令列表，如不指定，则使用镜像打包时使用的启动命令
        - string
      args:     # 容器的启动命令参数列表
        - string
      workingDir: string  # 容器的工作目录
      volumeMounts:
        - name: string
          mountPath: string  # 挂载目录，绝对路径
          readOnly: boolean  # 默认false
      ports:
        - name: string
          containerPort: int
          hostPort: int
          protocol: string
      resources:
        requests:
          cpu: 100m
          memory: 200Mi
        limits:
          cpu: 200m       # cpu核数限制，单位核数，用于docker run --cpu-shares参数
          memory: 500Mi   # 内存限制，单位MiB GiB用于docker run --memory参数

  restartPolicy: [ Always | Never | OnFailure ]
  nodeSelector: object  # 选择pod的部署node
  hostNetwork: boolean  # 是否使用主机网络模式，默认false；设置为true，表示容器使用宿主机网络，不再使用docker网桥，该pod将无法在同一台宿主机上启动第二个副本
  imagePullSecrets:
    - name: string

  # 更多存储卷内容，看volume.yaml文件
  volumes:
    - name: string
      emptyDir: {}
