ResourceObject/resource_quota.yaml
## resource quota定义示例
---
apiVersion: v1
kind: Pod
metadata:
  name: string
spec:
  containers:
    - name: string
      image: string
  priorityClassName: xxx

# 创建resource quota
