ResourceObject/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: string
spec:
  containers:
    - name: string
      image: string
